--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,14 +1,28 @@
 ﻿@page "/"
-@using TeoriaColas.Pages.CapUno
 
 <PageTitle>Inicio</PageTitle>
 
-<h5 class="text-center pb-3">UNIVERSIDAD NACIONAL DE LA AMAZONIA PERUANA</h5>
-
-<h1 class="text-center">TEORÍA DE COLAS</h1>
-
 <div class="container">
     
+    <div class="jumbotron">
+        <h1 class="display-3">TEORÍA DE COLAS</h1>
+        <p class="lead">INVESTIGACION FORMATIVA IO - 2022 I</p>
+        <hr class="my-2">
+        <div class="row">
+            <div class="col-4">
+                <p class="pt-5">Cálcula operaciones de teoría de colas facílmente.</p>
+                <p class="lead pt-3">
+                    <a class="btn btn-outline-success btn-lg" href="capitulouno" role="button">Distribucion de probabilidad de Poisson</a>
+                </p>
+                <p class="lead pt-3">
+                    <a class="btn btn-outline-primary btn-lg" href="capitulodos" role="button">Modelo de línea de espera de canal único con llegadas Poisson y tiempos de servicio exponenciales</a>
+                </p>
+            </div>
+            <div class="col-4">
+                <img src="img/wallpaper.jpg" width="800"/>
+            </div>
+        </div>
+    </div>
 
 </div>   
 
