--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,29 +2,60 @@
 
 <PageTitle>Inicio</PageTitle>
 
-<div class="container">
-    
-    <div class="jumbotron">
-        <h1 class="display-3">TEORÍA DE COLAS</h1>
-        <p class="lead">INVESTIGACION FORMATIVA IO - 2022 I</p>
-        <hr class="my-2">
-        <div class="row">
-            <div class="col-4">
-                <p class="pt-5">Cálcula operaciones de teoría de colas facílmente.</p>
-                <p class="lead pt-3">
-                    <a class="btn btn-outline-success btn-lg" href="capitulouno" role="button">Distribucion de probabilidad de Poisson</a>
-                </p>
-                <p class="lead pt-3">
-                    <a class="btn btn-outline-primary btn-lg" href="capitulodos" role="button">Modelo de línea de espera de canal único con llegadas Poisson y tiempos de servicio exponenciales</a>
-                </p>
+<section class="">
+    <div class="landing">
+        <h1 class="text-center display-3 pt-5">TEORÍA DE COLAS</h1>
+        <p class="lead text-center">INVESTIGACION FORMATIVA IO - 2022 I</p>
+    </div>
+    <br/>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col-sm-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Capitulo 1</h5>
+                    <p class="card-text">Distribucion de probabilidad de Poisson.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="capitulouno" class="btn btn-primary">Calcular</a>
+                </div>
             </div>
-            <div class="col-4">
-                <img src="img/wallpaper.jpg" width="800"/>
+        </div>
+        <div class="col-sm-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Capitulo 2</h5>
+                    <p class="card-text">Modelo de línea de espera de canal único con llegadas Poisson y tiempos de servicio exponenciales.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="capitulodos" class="btn btn-primary">Calcular</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Capitulo 3</h5>
+                    <p class="card-text">Lineas de espera de dos canales.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="capitulotres" class="btn btn-primary">Calcular</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Capitulo 4</h5>
+                    <p class="card-text">Lineas de espera de dos canales.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="capitulotres" class="btn btn-primary">Calcular</a>
+                </div>
             </div>
         </div>
     </div>
-
-</div>   
+    <br/>
+</section>   
 
 @code{
 
