--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -16,12 +16,17 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="capitulouno">
-                <span class="oi oi-plus" aria-hidden="true"></span> Capítulo Uno
+                <span class="oi oi-book" aria-hidden="true"></span> Capítulo Uno
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="capitulodos">
-                <span class="oi oi-plus" aria-hidden="true"></span> Capítulo Dos
+                <span class="oi oi-book" aria-hidden="true"></span> Capítulo Dos
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="capitulotres">
+                <span class="oi oi-book" aria-hidden="true"></span> Capítulo Tres
             </NavLink>
         </div>
     </nav>
